force-app/main/default/objects/Dialpad__Dialpad_List__c/Dialpad__Dialpad_List__c.object-meta.xml
<CustomObject>
    <label>Dialpad List</label>
    <nameField>
        <label>List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dialpad Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>