force-app/main/default/objects/Dialpad__Dialpad_List__c/fields/Dialpad__Column_List__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Column_List__c</fullName>
    <label>Column List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>