force-app/main/default/objects/Dialpad__Dialpad_List__c/fields/Dialpad__Dialpad_Dialing_Limit__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_Dialing_Limit__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Dialpad Dialing Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>