force-app/main/default/objects/Dialpad__Dialpad_List__c/fields/Dialpad__Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Follow_up_Date__c</fullName>
    <label>Follow-up Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>