force-app/main/default/objects/Dialpad__Dialpad_List__c/fields/Dialpad__List_Type__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__List_Type__c</fullName>
    <label>List Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>