force-app/main/default/objects/Dialpad__Dialpad_List__c/fields/Dialpad__Number_of_undialed_records__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Number_of_undialed_records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of undialed records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>