force-app/main/default/objects/Dialpad__Dialpad_List__c/fields/Dialpad__Order_By_Clause__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Order_By_Clause__c</fullName>
    <label>Order By Clause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>