force-app/main/default/objects/Dialpad__Dialpad_List__c/validationRules/Dialpad__Active_list_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Dialpad__Active_list_Rule</fullName>
    <active>false</active>
    <description>Restrict users from creating lists with Active status</description>
    <errorConditionFormula>AND(ISNEW(),ISPICKVAL(Dialpad__Status__c, &apos;Active&apos;))</errorConditionFormula>
    <errorMessage>The status of the new list cannot be Active</errorMessage>
</ValidationRule>