force-app/main/default/objects/Dialpad__Dialpad_List__c/validationRules/Dialpad__ArchiveRule.validationRule-meta.xml
<ValidationRule>
    <fullName>Dialpad__ArchiveRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), AND(ISCHANGED(Dialpad__Status__c ) , 
 (ISPICKVAL(PRIORVALUE( Dialpad__Status__c ) , &quot;Archive&quot;))))</errorConditionFormula>
    <errorMessage>Status of Archived list cannot be changed</errorMessage>
</ValidationRule>