force-app/main/default/objects/Dialpad__Dialpad_List__c/validationRules/Dialpad__ReadOnlyListType.validationRule-meta.xml
<ValidationRule>
    <fullName>Dialpad__ReadOnlyListType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Dialpad__List_Type__c ))</errorConditionFormula>
    <errorMessage>Can Not Edit List Type</errorMessage>
</ValidationRule>