force-app/main/default/objects/Dialpad__Dialpad_List__c/validationRules/Dialpad__ReadOnlyObjectName.validationRule-meta.xml
<ValidationRule>
    <fullName>Dialpad__ReadOnlyObjectName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Dialpad__Salesforce_Object__c ))</errorConditionFormula>
    <errorMessage>Can Not Edit Object Name</errorMessage>
</ValidationRule>