force-app/main/default/objects/Dialpad__Dialpad_List__c/validationRules/Dialpad__RegexCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Dialpad__RegexCheck</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(Name, &quot;^([0-9a-zA-Z\\d-_]+\\s?)*$&quot;))</errorConditionFormula>
    <errorMessage>Please fill a valid Name</errorMessage>
</ValidationRule>